--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+
+:root{
+  --primary: rgb(252, 135, 154);
+  --secondary: grey;
+  --error: orange;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  
+  font-family: 'Fira Sans', sans-serif;
+  color: --var(--secondary);
+}
+.App{
+  max-width: 960px;
+  margin: 0 auto;
+}
+.title h1{
+  color: var(--primary);
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  font-weight: normal;
+}
+.title h2, .title p{
+  text-align: center;
+}
+.title h2{
+  margin-top: 60px;
+  font-size: 2.6rem;
+}
+
+/*upload form style*/
+form{
+  margin: 30px auto 10px;
+  text-align: center;
+}
+label input{
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+label {
+display: block;
+width: 30px;
+height: 30px;
+border: 1px solid var(--primary);
+border-radius: 50%;
+margin: 10px auto;
+line-height: 30px;
+color: var(--primary);
+font-weight: bold;
+font-size: 24px;
+}
+label:hover{
+  background: var(--primary);
+  color: white;
+}
+.output{
+  font-size: 0.8rem;
+  height: 60px;
+}
+.error{
+  color: var(--error);
+}
+.progress-bar{
+  height: 5px;
+  background-color: var(--primary);
+  margin-top: 20px;
 }
