--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,45 @@ label:hover{
   background-color: var(--primary);
   margin-top: 20px;
 }
+
+/*image grid styles*/
+.img-grid{
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /*there will be 3 columns of 1fraction each*/
+  grid-gap: 40px;
+}
+.img-wrap{
+  overflow: hidden;
+  height:0;
+  padding: 50% 0;
+  /**padding controls height, will always be square regadless of width**/
+  position: relative;
+  opacity: 0.8;
+}
+.img-wrap img{
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top:0;
+  left: 0;
+}
+/*modal styles*/
+.backdrop{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+.backdrop img{
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);  /*0.5 - alpha value, it means that background is semi-transparent*/
+  border: 3px solid white;
+}
